# echoledger-mcp

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  NOTICE  README.md  pyproject.toml  server.json  smithery.yaml
docs/: DEFIMIND_AGENT_CONCEPT.md  DEFIMIND_MCP_EXECUTION_PLAN.md  LISTING_COPY.md  PHASE_0_SCAFFOLD.md  PHASE_1_SERVER.md  PHASE_2_CONTAINER.md  PHASE_3_DEPLOY.md  PHASE_4_DISTRIBUTION.md  PHASE_5_CITATION.md  TOOLS.md  V0_2_EXPAND_TOOLS_5_TO_10.md
src/defimind_mcp/: __init__.py  server.py
src/echoledger_mcp/: __init__.py  server.py
tests/: test_live.py  test_server.py
