[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defimind-mcp"
version = "0.2.0"
description = "DeFiMind MCP — live LP analytics (Uniswap V2/V3, Balancer, Curve stableswap) over the Model Context Protocol, powered by open-source DeFiPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ian C. Moore" }]
keywords = ["mcp", "defi", "uniswap", "balancer", "curve", "stableswap", "ethereum", "defipy", "amm"]

dependencies = [
    # Chain-reading DeFiPy: LiveProvider V2/V3 + Balancer + Stableswap via
    # caller-supplied RPC. Pinned to the 2.2.x line so the hosted tool
    # surface can't silently shift; lifted from <2.2 to ship the Balancer
    # & Stableswap LiveProviders (the v0.2 surface expansion, 5 -> 10 tools).
    # Floor at 2.2.1 for the DetectRugSignals live-snapshot fix (2.2.0
    # false-flagged healthy live pools as "high" risk); also busts the
    # Docker dep-layer cache so a redeploy actually pulls 2.2.1.
    "defipy[chain]>=2.2.1,<2.3",
    # MCP Python SDK.
    "mcp>=1.27.0",
    # Streamable-HTTP transport mount (final choice settled in Phase 1).
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
defimind-mcp = "defimind_mcp.server:run_http"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://defimind.ai"
Repository = "https://github.com/defimind-ai/defimind-mcp"
Paper = "https://arxiv.org/abs/2605.11522"

[tool.setuptools.packages.find]
where = ["src"]
