[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoledger-mcp"
version = "0.2.3"
description = "EchoLedger MCP — live LP analytics (Uniswap V2/V3, Balancer, Curve stableswap) over the Model Context Protocol, powered by open-source DeFiPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ian C. Moore" }]
keywords = ["mcp", "defi", "uniswap", "balancer", "curve", "stableswap", "ethereum", "defipy", "amm"]

dependencies = [
    # Chain-reading DeFiPy: LiveProvider V2/V3 + Balancer + Stableswap via
    # caller-supplied RPC. Pinned to the 2.2.x line so the hosted tool
    # surface can't silently shift; lifted from <2.2 to ship the Balancer
    # & Stableswap LiveProviders (the v0.2 surface expansion, 5 -> 10 tools).
    # Floor at 2.2.2 for the V2 State Twin real-LP-totalSupply fix (2.2.1
    # and earlier mis-scaled AnalyzePosition's absolute V2 outputs —
    # current_value / net_pnl / fee_income); the bumped floor also busts the
    # Docker dep-layer cache so a redeploy actually pulls 2.2.2. (2.2.1 fixed
    # DetectRugSignals live-snapshot false-positives; 2.2.0 shipped the
    # Balancer/Stableswap LiveProviders.)
    "defipy[chain]>=2.2.2,<2.3",
    # MCP Python SDK.
    "mcp>=1.27.0",
    # Streamable-HTTP transport mount (final choice settled in Phase 1).
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
echoledger-mcp = "echoledger_mcp.server:run_http"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://echoledger.ai"
Repository = "https://github.com/echoledger-ai/echoledger-mcp"
Paper = "https://arxiv.org/abs/2605.11522"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src-layout: put `src` on sys.path so a bare `pytest` can import
# echoledger_mcp without an editable install (otherwise collection fails
# with ModuleNotFoundError: No module named 'echoledger_mcp').
pythonpath = ["src"]
testpaths = ["tests"]
